intro alignment fix

--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ background-color:#DDECE9 ;
 .intro h1{
 	padding-top: 5%;
 	padding-left: 10%;
-	padding-right: 25%;
+	padding-right: 13%;
 	padding-bottom: 2%;
 	display: block;
 	width: 100%;
